--- a/templates/modules/panel.html
+++ b/templates/modules/panel.html
@@ -24,11 +24,14 @@
         <halo:footer />
       </ul>
     </section>
-    <ul th:with="stats = ${siteStatsFinder.getStats()}">
-      <li th:text="'浏览量：'+${stats.visit}"></li>
-      <li th:text=" '文章数：'+${stats.post}"></li>
-      <li th:text=" '运行天数：'+${stats.upvote}"></li>
-      <li th:text=" '评论数：'+${stats.comment}"></li>
-    </ul>
+    <section class="access-links">
+      <h2 class="panel-heading">[[#{blog.overview}]]</h2>
+      <ul th:with="stats = ${siteStatsFinder.getStats()}" class="post-content pl-0 pb-1 ml-1 mt-2">
+        <li th:text="'浏览量：'+${stats.visit}"></li>
+        <li th:text=" '文章数：'+${stats.post}"></li>
+        <li th:text=" '运行天数：'+${stats.upvote}"></li>
+        <li th:text=" '评论数：'+${stats.comment}"></li>
+      </ul>
+    </section>
   </div>
 </html>
